--- a/style.css
+++ b/style.css
@@ -784,11 +784,23 @@ a:active {
 /*--------------------------------------------------------------
 ## Next page transition
 --------------------------------------------------------------*/
+.post_navigation_sidebar_overlay {
+	width: 100%;
+	background-color: green;
+	height: 500px;
+	z-index: 50;
+	position: absolute;
+	left: 0;
+	margin-top: -250px;
+}
+
 .post_navigation_button {
 	width: 100%;
 	height: 5rem;
 	padding: 2rem 0.75rem;
 	border-radius: 5px;
+	z-index: 100;
+	position: relative;
 }
 
 .post_navigation_button:hover {
@@ -797,7 +809,10 @@ a:active {
 }
 
 .post_navigation_preview {
-	position: absolute;
+	position: fixed;
+	top: calc(50%);
+	z-index: 10;
+
 	width: 400px;
 	height: 200px;
 	border-radius: 5px;
@@ -815,13 +830,7 @@ a:active {
 	will-change: transform;
 	transform: translateZ(0);
 
-	transition: all 250ms ease-out;
-}
-
-.post_navigation_preview_hidden {
-	width: 0px;
-	/*opacity: 0;*/
-	/*left: -400px !important;*/
+	transition: all 150ms ease-out;
 }
 
 .post_navigation_preview_constant_width {
@@ -846,11 +855,23 @@ a:active {
 	transform: rotate(-45deg);
 }*/
 
-.post_navigation_image {
+.post_navigation_image_container {
 	position: absolute;
 	width: 400px;
 	height: 200px;
 	z-index: 20;
+}
+
+.post_navigation_image_overlay {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.4);
+	position: absolute;
+}
+
+.post_navigation_image {
+	width: 100%;
+	height: 100%;
 }
 
 .post_navigation_image img {
@@ -874,13 +895,21 @@ a:active {
 }
 
 .post_navigation_previous {
-	left: 60px;
+	left: 80px;
 	margin-top: calc(-100px + 0.5rem);
 }
 
+.post_navigation_previous_hidden {
+	left: -400px;
+}
+
 .post_navigation_next {
-	right: 60px;
+	right: 80px;
 	margin-top: calc(-100px + 0.5rem);
+}
+
+.post_navigation_next_hidden {
+	right: -400px;
 }
 
 
@@ -2168,8 +2197,10 @@ em {
 .frame_lefrig_hidden {
 	width: 0%;
 	height: 100%;
+	pointer-events: none;
 
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
@@ -2177,6 +2208,8 @@ em {
 .header_fill_visible {
 	height: 100%;
 	width: 100%;
+
+	pointer-events: initial;
 }
 
 .align_pos_bottom {
